packages/taquito-michel-codec/test/contracts_011/ill_typed/push_big_map_with_id_without_parens.tz
# This contract verifies it is not possible to use the instruction `PUSH big_map
# tk tv i` where i is the ID of an existing big_map
parameter int;
storage (big_map string nat);
code {
       UNPAIR;
       DROP;
       PUSH big_map string nat 0;
       NIL operation;
       PAIR;
     };